clusters/main/kubernetes/system/longhorn/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn
  namespace: longhorn-system
  annotations:
      cert-manager.io/cluster-issuer: cloudflare-prod
      cert-manager.io/private-key-rotation-policy: Always
      nginx.ingress.kubernetes.io/whitelist-source-range: ${WHITELIST_IP_RANGE},${PODNET}
spec:
  ingressClassName: internal
  rules:
  - host: longhorn.${BASE_DOMAIN}
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: longhorn-frontend
            port:
              number: 80
  tls:
    - hosts:
      - longhorn.${BASE_DOMAIN}
      secretName: longhorn-tls-0
